--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@solana/wallet-adapter-react-ui": "0.9.31",
+    "@solana/wallet-adapter-wallets": "^0.19.26",
+    "@solana/web3.js": "^1.90.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
